--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"require-dev": {
 		"nextcloud/coding-standard": "^v1.1.1",
-		"psalm/phar": "^6.8.0",
+		"psalm/phar": "~6.7.1",
 		"bantu/ini-get-wrapper": "v1.0.1",
 		"phpunit/phpunit": "^9.5",
 		"nextcloud/ocp": "dev-stable31"
