--- a/vendor-bin/phpunit/composer.json
+++ b/vendor-bin/phpunit/composer.json
@@ -1,5 +1,11 @@
 {
     "require-dev": {
         "phpunit/phpunit": "^10"
-    }
+    },
+	"config": {
+		"platform": {
+			"php": "8.1.33"
+		},
+		"sort-packages": true
+	}
 }
