--- a/vendor-bin/psalm/composer.json
+++ b/vendor-bin/psalm/composer.json
@@ -1,5 +1,11 @@
 {
     "require-dev": {
-        "vimeo/psalm": "^6.12"
-    }
+        "vimeo/psalm": "^6"
+    },
+	"config": {
+		"platform": {
+			"php": "8.1.33"
+		},
+		"sort-packages": true
+	}
 }
