--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"require-dev": {
 		"bamarni/composer-bin-plugin": "^1.8",
 		"bantu/ini-get-wrapper": "1.0.1",
-		"nextcloud/ocp": "dev-master"
+		"nextcloud/ocp": "dev-stable32"
 	},
 	"config": {
 		"allow-plugins": {
